--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .App {
+
   text-align: center;
   background-size: 800px 600px;
   align-items: center;
@@ -8,30 +9,49 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+
 }
 
+.homeText {
+
+  color: white;
+  text-align: center;
+  font-size: 20px;
+
+}
 
 .App-logo {
+
   height: 40vmin;
   pointer-events: none;
+
 }
 
 @media (prefers-reduced-motion: no-preference) {
+
   .App-logo {
+
     animation: App-logo-spin infinite 20s linear;
+
   }
+
 }
 
 .custom-navbar {
+
   background-color: orangered;
   color: white;
+
 }
 
 .custom-navbar .navbar-nav .nav-link {
-  color: white; /* Set the text color to white */
+
+  color: white;
+
 }
 
 .App-header {
+
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -44,19 +64,25 @@
 }
 
 .App-link {
+
   color: #61dafb;
+
 }
 
 .student-container {
+
   display: inline-block;
   width: 33.33%;
   box-sizing: border-box;
   padding: 10px;
+
 }
 
 .student-card {
-  background-color: #1fa866 !important; /* Set the background color to bright yellow */
-  color: #f5f6f9 !important; /* Set the text color to black */
+
+  background-color: #1fa866 !important;
+  color: #f5f6f9 !important; 
+
 }
 
 .form-group {
@@ -70,7 +96,9 @@
 }
 
 .form-control {
+
   background-color: rgb(220, 212, 212) !important;
+
 }
 
 .register-button {
@@ -81,14 +109,42 @@
 }
 
 .registration-label {
+
   font-size: 23px;
+
+}
+
+.login-form-container {
+
+  margin-top: 200px;
+  color: rgb(215, 64, 14);
+
+}
+
+.login-form-input {
+
+  margin-top: 30px;
+
+}
+
+.login-form-button {
+
+  margin-top: 20px;
+
 }
 
 @keyframes App-logo-spin {
+
   from {
+
     transform: rotate(0deg);
+
   }
+
   to {
+
     transform: rotate(360deg);
+
   }
+
 }
