--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+
+/* Main Container for App */
 .App {
 
   text-align: center;
@@ -12,6 +14,7 @@
 
 }
 
+/* Home Page Text */
 .homeText {
 
   color: white;
@@ -20,23 +23,7 @@
 
 }
 
-.App-logo {
-
-  height: 40vmin;
-  pointer-events: none;
-
-}
-
-@media (prefers-reduced-motion: no-preference) {
-
-  .App-logo {
-
-    animation: App-logo-spin infinite 20s linear;
-
-  }
-
-}
-
+/* Nav Bar Style */
 .custom-navbar {
 
   background-color: orangered;
@@ -44,12 +31,14 @@
 
 }
 
+/* Nav Bar Style */
 .custom-navbar .navbar-nav .nav-link {
 
   color: white;
 
 }
 
+/* App Headers Style */
 .App-header {
 
   background-color: #282c34;
@@ -69,6 +58,7 @@
 
 }
 
+/* Card Sizing */
 .student-container {
 
   display: inline-block;
@@ -78,6 +68,7 @@
 
 }
 
+/* Login Text */
 .student-card {
 
   background-color: #1fa866 !important;
@@ -85,6 +76,7 @@
 
 }
 
+/* Registration Form Styling */
 .form-group {
 
   width: 33.33%;
@@ -95,12 +87,14 @@
 
 }
 
+/* Registration Form Styling */
 .form-control {
 
   background-color: rgb(220, 212, 212) !important;
 
 }
 
+/* Registration Form Styling */
 .register-button {
 
   margin-top: 30px;
@@ -108,43 +102,32 @@
 
 }
 
+/* Registration Form Styling */
 .registration-label {
 
   font-size: 23px;
 
 }
 
+/* Login Form Styling */
 .login-form-container {
 
   margin-top: 200px;
-  color: rgb(215, 64, 14);
+  color: rgb(238, 230, 227);
 
 }
 
+/* Login Form Styling */
 .login-form-input {
 
   margin-top: 30px;
 
 }
 
+/* Login Form Styling */
 .login-form-button {
 
   margin-top: 20px;
 
 }
 
-@keyframes App-logo-spin {
-
-  from {
-
-    transform: rotate(0deg);
-
-  }
-
-  to {
-
-    transform: rotate(360deg);
-
-  }
-
-}
